--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-custom-scrollbar": "^1.4.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "sass": "^1.42.1",
+    "sass-loader": "10",
     "vue-template-compiler": "^2.6.11"
   }
 }
